--- a/Setup.ipynb
+++ b/Setup.ipynb
@@ -436,11 +436,133 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### REDIS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\"bitnami\" has been added to your repositories\n"
+     ]
+    }
+   ],
+   "source": [
+    "! helm repo add bitnami https://charts.bitnami.com/bitnami"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$HELM_HOME has been configured at /Users/eaddsan/.helm.\n",
+      "Warning: Tiller is already installed in the cluster.\n",
+      "(Use --client-only to suppress this message, or --upgrade to upgrade Tiller to the current version.)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! helm init --service-account tiller"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Could not get apiVersions from Kubernetes: unable to retrieve the complete list of server APIs: admission.certmanager.k8s.io/v1beta1: the server is currently unable to handle the request\n"
+     ]
+    }
+   ],
+   "source": [
+    "! helm install bitnami/redis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "configmap/redis-cluster created\n",
+      "statefulset.apps/redis-cluster created\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl apply -f k8s/redis/redis-sts.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "service/redis-cluster unchanged\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl apply -f k8s/redis/redis.svc.yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "configmap \"redis-cluster\" deleted\n",
+      "statefulset.apps \"redis-cluster\" deleted\n"
+     ]
+    }
+   ],
+   "source": [
+    "!kubectl delete -f k8s/redis/redis-sts.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### REDIS NEEDS 6 nodes for a cluster"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kubectl exec -it redis-cluster-0 -- redis-cli --cluster create --cluster-replicas 0 $(kubectl get pods -l app=redis-cluster -o jsonpath='{range.items[*]}{.status.podIP}:6379 ')"
+   ]
   }
  ],
  "metadata": {
